--- a/AdventOfCode2021/AdventOfCode2021.fsproj
+++ b/AdventOfCode2021/AdventOfCode2021.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="Day4.fs" />
     <Compile Include="Day5.fs" />
     <Compile Include="Day6.fs" />
+    <Compile Include="Day7.fs" />
     <Compile Include="Program.fs" />
     <Content Include="Input\Day1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
