PSeq day4 and 7

--- a/AdventOfCode2021/AdventOfCode2021.fsproj
+++ b/AdventOfCode2021/AdventOfCode2021.fsproj
@@ -20,4 +20,7 @@
     </Content>
     <None Include="Scratchpad.fsx" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="FSharp.Collections.ParallelSeq" Version="1.2.0" />
+  </ItemGroup>
 </Project>
