--- a/AdventOfCode2021/AdventOfCode2021.fsproj
+++ b/AdventOfCode2021/AdventOfCode2021.fsproj
@@ -17,6 +17,7 @@
     <Compile Include="Day11.fs" />
     <Compile Include="Day12.fs" />
     <Compile Include="Day13.fs" />
+    <Compile Include="Day14.fs" />
     <Compile Include="Program.fs" />
     <Content Include="Input\Day1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
