--- a/AdventOfCode2021/AdventOfCode2021.fsproj
+++ b/AdventOfCode2021/AdventOfCode2021.fsproj
@@ -18,6 +18,8 @@
     <Compile Include="Day12.fs" />
     <Compile Include="Day13.fs" />
     <Compile Include="Day14.fs" />
+    <Compile Include="Day15.fs" />
+    <Compile Include="Day16.fs" />
     <Compile Include="Program.fs" />
     <Content Include="Input\Day1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
