--- a/AdventOfCode2021/AdventOfCode2021.fsproj
+++ b/AdventOfCode2021/AdventOfCode2021.fsproj
@@ -21,6 +21,9 @@
     <Compile Include="Day15.fs" />
     <Compile Include="Day16.fs" />
     <Compile Include="Day17.fs" />
+    <Compile Include="Day18.fs" />
+    <Compile Include="Day19.fs" />
+    <Compile Include="Day20.fs" />
     <Compile Include="Program.fs" />
     <Content Include="Input\Day1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
